--- a/examples/README
+++ b/examples/README
@@ -2,8 +2,8 @@
 1) Configure, compile and install vmime library
 
 2) Compile the sample programs with:
-  $ g++ -o exampleX exampleX.cpp ../libvmime.a
+  $ g++ -o exampleX exampleX.cpp ../libvmime.a ../libvmime-posix.a
 
 3) For a more complete documentation, please visit:
-   http://www.kisli.com/vmime/doc/
+   http://vmime.sourceforge.net/documentation/
 
