--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 VERSION 0.6.0-cvs
 =================
 
+2004-12-22  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Finished 'maildir' implementation. This is EXPERIMENTAL!
+
 2004-12-19  Vincent Richard  <vincent@vincent-richard.net>
 
  * Added chaining in exception handling. vmime::exception::other() returns
