--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,9 @@ VERSION 0.6.0-cvs
  * Added a getCapabilities() function on 'vmime::messaging::store' to
    quickly check which features are available.
 
+ * New functions in 'component': getParsedOffset(), getParsedLength()
+   and getChildComponents().
+
 2004-12-19  Vincent Richard  <vincent@vincent-richard.net>
 
  * Added chaining in exception handling. vmime::exception::other() returns
