--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 
-VERSION 0.6.0-cvs
-=================
+VERSION 0.6.0
+=============
 
 2004-12-22  Vincent Richard  <vincent@vincent-richard.net>
 
