--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
 
+VERSION 0.6.1-cvs
+=================
+
+2004-12-22  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Started version 0.6.1.
+
+
 VERSION 0.6.0
 =============
 
