--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 VERSION 0.6.1-cvs
 =================
 
+2004-12-26  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Removed relative paths from #include's.
+
 2004-12-24  Vincent Richard  <vincent@vincent-richard.net>
 
  * Renamed class 'disposition' to 'contentDisposition' and the enum
