--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@ VERSION 0.6.1-cvs
 
  * Removed relative paths from #include's.
 
+ * Added support for 'pkg-config'.
+
 2004-12-24  Vincent Richard  <vincent@vincent-richard.net>
 
  * Renamed class 'disposition' to 'contentDisposition' and the enum
