--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@ VERSION 0.6.1-cvs
 
  * Added support for 'pkg-config'.
 
+ * Added versioning in library name (eg. libvmime-0.6.a).
+
 2004-12-24  Vincent Richard  <vincent@vincent-richard.net>
 
  * Renamed class 'disposition' to 'contentDisposition' and the enum
