--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 
-VERSION 0.6.1-cvs
-=================
+VERSION 0.6.1
+=============
 
 2004-12-27  Vincent Richard  <vincent@vincent-richard.net>
 
