--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 
-VERSION 0.6.2-cvs
-=================
+VERSION 0.6.2
+=============
 
 2005-01-04  Vincent Richard  <vincent@vincent-richard.net>
 
