--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
 
+VERSION 0.6.3cvs
+================
+
+2005-01-05  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Started version 0.6.3.
+
+
 VERSION 0.6.2
 =============
 
