--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,11 @@
 VERSION 0.6.3cvs
 ================
 
+2005-01-15  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Fixed missing 'vmime/config.hpp' include when installing VMime
+   using 'make install'.
+
 2005-01-13  Vincent Richard  <vincent@vincent-richard.net>
 
  * messaging/events.*: prefixed function names with 'get' + written
