--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,13 @@
 VERSION 0.6.3cvs
 ================
 
+2005-01-28  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Splitted 'contentHandler' into three classes: 'emptyContentHandler',
+   'stringContentHandler' and 'streamContentHandler'.
+
+ * Fixed bugs with signed/unsigned char in 'parserHelpers'.
+
 2005-01-15  Vincent Richard  <vincent@vincent-richard.net>
 
  * Fixed missing 'vmime/config.hpp' include when installing VMime
