--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
 
+VERSION 0.6.4cvs
+================
+
+2005-01-28  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Started version 0.6.4.
+
+
 VERSION 0.6.3
 =============
 
