--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,11 @@
 VERSION 0.6.4cvs
 ================
 
+2005-03-15  Vincent Richard  <vincent@vincent-richard.net>
+
+ * text.{cpp|hpp}, word.{cpp|hpp}: moved word parsing from 'text' class
+   to 'word' class, which now inherits from 'component'.
+
 2005-03-14  Vincent Richard  <vincent@vincent-richard.net>
 
  * removed singleton<> and singletonManager classes: useless and quite
