Basic support for 'Disposition' header field.

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,9 @@ VERSION 0.6.4cvs
    deleteMessages() when 'to == -1' and last message not being
    deleted (thanks to Stefan Uhrig).
 
+ * SConstruct: fixed compilation/linking problem with g++ and X86-64 on
+    static library: added -fPIC/-fpic in compiler flags.
+
 2005-03-17  Vincent Richard  <vincent@vincent-richard.net>
 
  * base.{cpp|hpp}: renamed 'MIME_VERSION' to 'SUPPORTED_MIME_VERSION'.
