--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 VERSION 0.6.4cvs
 ================
 
+2005-03-24  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Added 'HACKING' file.
+
 2005-03-23  Vincent Richard  <vincent@vincent-richard.net>
 
  * messaging/POP3*: fixed incorrect message size. Fixed a bug in
