--- a/HACKING
+++ b/HACKING
@@ -9,6 +9,7 @@ quality of the code.
      1.2. Unit tests
      1.3. CVS
      1.4. ChangeLog
+     1.5. Warnings
 2. Style, indentation and braces
      2.1. Indentation
      2.2. Brace position
@@ -65,6 +66,12 @@ ChangeLog must be updated when a major change has occured. It is not required
 (but not forbidden) to report minor bug fixes in the ChangeLog.
 
 Each ChangeLog entry must have an author and a date.
+
+
+1.5. Warnings
+-------------
+
+The code should compile WITHOUT ANY WARNING, even those for unused parameters!
 
 
 
