--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,12 @@
 VERSION 0.6.4cvs
 ================
 
+2005-03-25  Vincent Richard  <vincent@vincent-richard.net>
+
+ * mdn/*.{cpp|hpp}: added support for Message Disposition Notifications (MDN),
+   as defined by RFC-3798 and RFC-1892. This is a very first implementation,
+   API is subject to changes...
+
 2005-03-24  Vincent Richard  <vincent@vincent-richard.net>
 
  * Added 'HACKING' file.
