--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,12 @@
 VERSION 0.6.4cvs
 ================
 
+2005-03-27  Vincent Richard  <vincent@vincent-richard.net>
+
+ * messageIdSequence.{cpp|hpp}: added a new basic type "messageIdSequence" for
+   a list of message-ids separated by CFWS (used in "References:" field, for
+   example).
+
 2005-03-25  Vincent Richard  <vincent@vincent-richard.net>
 
  * mdn/*.{cpp|hpp}: added support for Message Disposition Notifications (MDN),
