--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 VERSION 0.6.4cvs
 ================
 
+2005-03-27  Stefan Uhrig <stefanuhrig@gmx.net>
+
+ * Added Windows platform handlers.
+
 2005-03-27  Vincent Richard  <vincent@vincent-richard.net>
 
  * messageIdSequence.{cpp|hpp}: added a new basic type "messageIdSequence" for
