--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,8 @@ VERSION 0.6.4cvs
    a list of message-ids separated by CFWS (used in "References:" field, for
    example).
 
+ * SConstruct: added 'msvc' target to generate MSVC project files.
+
 2005-03-25  Vincent Richard  <vincent@vincent-richard.net>
 
  * mdn/*.{cpp|hpp}: added support for Message Disposition Notifications (MDN),
