--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,11 @@
 VERSION 0.6.4cvs
 ================
 
+2005-04-03  Vincent Richard  <vincent@vincent-richard.net>
+
+ * messaging/*: moved IMAP, POP3, maildir and SMTP files to separate
+   namespaces.
+
 2005-03-31  Vincent Richard  <vincent@vincent-richard.net>
 
  * misc/importanceHelper.{cpp|hpp}: added support for message importance:
