--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,13 @@
 VERSION 0.6.4cvs
 ================
 
+2005-04-12  Vincent Richard  <vincent@vincent-richard.net>
+
+ * parameter.{cpp|hpp}, contentDispositionField.{cpp|hpp}: added support
+   for RFC-2231 (encoded word extensions). Changed 'filename' parameter
+   type from 'vmime::string' to 'vmime::word'. Default parameter type is
+   now vmime::word, and not vmime::string.
+
 2005-04-09  Vincent Richard  <vincent@vincent-richard.net>
 
  * encoderB64.cpp: fixed a bug in Base64 decoding. Bytes to be decoded
@@ -57,7 +64,7 @@ VERSION 0.6.4cvs
    deleted (thanks to Stefan Uhrig).
 
  * SConstruct: fixed compilation/linking problem with g++ and X86-64 on
-    static library: added -fPIC/-fpic in compiler flags.
+   static library: added -fPIC/-fpic in compiler flags.
 
  * messaging/POP3*: added notifications.
 
