--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
 
+VERSION 0.7.1cvs
+================
+
+2005-04-12  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Started version 0.7.1.
+
+
 VERSION 0.7.0
 =============
 
