--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 VERSION 0.7.1cvs
 ================
 
+2005-06-21  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Fixed compilation errors with g++ 4.0.
+
 2005-06-13  Vincent Richard  <vincent@vincent-richard.net>
 
  * word.cpp: fixed a bug in parsing, when the first character of word data
