--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
 
+VERSION 0.7.2cvs
+================
+
+2005-06-22  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Started version 0.7.2.
+
+
 VERSION 0.7.1
 =============
 
