--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 VERSION 0.7.2cvs
 ================
 
+2005-08-19  Vincent Richard  <vincent@vincent-richard.net>
+
+ * exception.hpp: vmime::exception now inherits from std::exception.
+
 2005-07-25  Vincent Richard  <vincent@vincent-richard.net>
 
  * Messaging folder: added a FETCH_IMPORTANCE flag to fetch the fields used
