--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,12 @@
 VERSION 0.7.2cvs
 ================
 
+2005-08-23  Vincent Richard  <vincent@vincent-richard.net>
+
+ * All sources: renamed 'vmime::messaging' to 'vmime::net'. An alias has been
+   kept for compatibility with previous versions (its use should be considered
+   as deprecated).
+
 2005-08-19  Vincent Richard  <vincent@vincent-richard.net>
 
  * exception.hpp: vmime::exception now inherits from std::exception.
