--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 VERSION 0.7.2cvs
 ================
 
+2005-10-03  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Added TLS/SSL support, using GNU TLS library.
+
 2005-09-17  Vincent Richard  <vincent@vincent-richard.net>
 
  * Added SASL support, based on GNU SASL library. Slightly modified
