--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,11 @@
 VERSION 0.7.2cvs
 ================
 
+2005-10-13  Vincent Richard  <vincent@vincent-richard.net>
+
+ * attachmentHelper.{hpp|cpp}: the attachmentHelper allows listing all
+   attachments in a message, as well as adding new attachments.
+
 2005-10-06  Vincent Richard  <vincent@vincent-richard.net>
 
  * utility/progressionListener.{hpp|cpp}: renamed 'progressionListener'
