--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 VERSION 0.7.2cvs
 ================
 
+2005-11-05  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Refactored header field values and parameters.
+
 2005-10-19  Vincent Richard  <vincent@vincent-richard.net>
 
  * charsetConverter.{hpp|cpp}: new object 'charsetConverter' for converting
