--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
 
+VERSION 0.8.1cvs
+================
+
+2005-11-06  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Started version 0.8.1.
+
+
 VERSION 0.8.0
 =============
 
