--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,11 @@
 VERSION 0.8.1cvs
 ================
 
+2005-12-04  Vincent Richard  <vincent@vincent-richard.net>
+
+ * posixChildProcess.cpp: fixed a bug in argument vector; last argument
+   was not NULL (thanks to Bertrand Benoit).
+
 2005-11-27  Vincent Richard  <vincent@vincent-richard.net>
 
  * maildirUtils.cpp: fixed problem with ':' in filename on Windows
