--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,18 @@
+
+VMIME AUTHORS AND CONTRIBUTORS
+==============================
+
 Vincent Richard <vincent@vincent-richard.net>
 Project originator, design, core implementation.
+
+Pierre Thierry <nowhere.man@levallois.eu.org>
+Patches for STL algorithms.
+
+Other contributors:
+
+ - Stefan Uhrig  <stefanuhrig@gmx.net>
+ - Rafael Fernandez <prf@adinet.com.uy>
+ - Xin Li <lixin3@staff.sina.com.cn>
+ - Benjamin Biron <benbiron@gmail.com>
+ - Bertrand Benoit <bsquare@bsquare.levillage.org>
+
