Update for new contributor.

--- a/AUTHORS
+++ b/AUTHORS
@@ -15,4 +15,5 @@ Other contributors:
  - Xin Li <lixin3@staff.sina.com.cn>
  - Benjamin Biron <benbiron@gmail.com>
  - Bertrand Benoit <bsquare@bsquare.levillage.org>
+ - Tim Teulings <rael@edge.ping.de>
 
