--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 VERSION 0.8.1cvs
 ================
 
+2006-01-16  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Added support for attachments of type "message/rfc822".
+
 2006-01-15  Vincent Richard  <vincent@vincent-richard.net>
 
  * IMAP: implemented multi-fetching. Now using "FETCH x:y" instead of
