--- a/doc/book/basics.tex
+++ b/doc/book/basics.tex
@@ -73,7 +73,7 @@ you would use normal ("raw") C++ pointers (eg. you can write
 
 Type safety is also guaranteed, and you can type cast smart pointers using
 the {\vcode staticCast()}, {\vcode dynamicCast()} and {\vcode constCast()}
-equivalents on {\vcode mime::ref} and {\vcode vmime::weak\_ref} objects:
+equivalents on {\vcode vmime::ref} and {\vcode vmime::weak\_ref} objects:
 
 \begin{lstlisting}[caption={Casting smart pointers}]
 class myBase : public vmime::object { }
