--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
 
+VERSION 0.8.2cvs
+================
+
+2006-12-20  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Started version 0.8.2.
+
+
 VERSION 0.8.1
 =============
 
