--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,9 @@ Project originator, design, core implementation.
 Pierre Thierry <nowhere.man@levallois.eu.org>
 Patches for STL algorithms.
 
+Zarafa <http://developer.zarafa.com/VmimePatches>
+Miscellaneous patches.
+
 Other contributors:
 
  - Stefan Uhrig  <stefanuhrig@gmx.net>
