--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
 
+VERSION 0.9.1svn
+================
+
+2008-10-19  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Started version 0.9.1.
+
+
 VERSION 0.9.0
 =============
 
