--- a/AUTHORS
+++ b/AUTHORS
@@ -19,4 +19,5 @@ Other contributors:
  - Benjamin Biron <benbiron@gmail.com>
  - Bertrand Benoit <bsquare@bsquare.levillage.org>
  - Tim Teulings <rael@edge.ping.de>
+ - Georg Sauthoff <gsauthof@techfak.uni-bielefeld.de>
 
