--- a/AUTHORS
+++ b/AUTHORS
@@ -19,6 +19,7 @@ VMIME CONTRIBUTORS
  - Georg Sauthoff <gsauthof@techfak.uni-bielefeld.de>
  - Pierre Thierry <nowhere.man@levallois.eu.org> (patches for STL algorithms)
  - Zarafa <http://developer.zarafa.com/VmimePatches>
+ - Bartek Szurgot <vempirelord@wp.pl, http://baszerr.org>
 
 Please apologize if I have forgotten someone here.  ;)
 See SVN Changelog for full list.
