Fixed wrong name.

--- a/AUTHORS
+++ b/AUTHORS
@@ -20,7 +20,7 @@ VMIME CONTRIBUTORS
  - Pierre Thierry <nowhere.man@levallois.eu.org> (patches for STL algorithms)
  - Zarafa <http://developer.zarafa.com/VmimePatches>
  - Bartek Szurgot <vempirelord@wp.pl, http://baszerr.org>
- - Achim Brändt <http://sourceforge.net/users/a-brandt/>
+ - Achim Brandt <http://sourceforge.net/users/a-brandt/>
 
 Please apologize if I have forgotten someone here.  ;)
 See SVN Changelog for full list.
