--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
 
+VERSION 0.9.2svn
+================
+
+2010-11-16  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Started version 0.9.2.
+
+
 VERSION 0.9.1
 =============
 
