Typo fix: oject instead of object

--- a/doc/book/net.tex
+++ b/doc/book/net.tex
@@ -38,7 +38,7 @@ used for IMAP, POP3 and maildir.
 A transport service is capable of sending messages. This is used for
 SMTP and sendmail.
 
-\item {\vcode vmime::net::session}: a session oject is used to store the
+\item {\vcode vmime::net::session}: a session object is used to store the
 parameters used by a service (eg. connection parameters). Each service
 instance is associated with only one session. The session object is capable
 of creating instances of services.
