--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,17 @@
 VERSION 0.9.2svn
 ================
 
+2012-11-03  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Migrated to CMake build system. Conditional compilation of source files.
+   Automatic selection of platform handler.
+
+ * Added support for OpenSSL (thanks to Mehmet Bozkurt).
+
+2012-10-15  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Added support for timeout when receiving data from a socket.
+
 2012-04-16  Vincent Richard  <vincent@vincent-richard.net>
 
  * MIME Parser can now operate directly on an input stream (eg. file).
